@@ -1,11 +1,13 @@
-FROM maven:3.5-jdk-8-alpine as BUILD
+FROM errordeveloper/prom-java-demo-deps as DEPS
+COPY . /usr/src/app
+RUN mvn -f /usr/src/app/pom.xml dependency:resolve
 
+FROM maven:3.5-jdk-8-alpine as BUILD
+COPY --from=DEPS /root/.m2 /root/.m2
 COPY . /usr/src/app
 RUN mvn -f /usr/src/app/pom.xml clean package
 
-FROM openjdk:8-jdk-alpine
-ENV PORT 4567
-EXPOSE 4567
-COPY --from=BUILD /usr/src/app/target/helloworld-jar-with-dependencies.jar /opt/app.jar
+FROM openjdk:8u131-jre-alpine
+COPY --from=BUILD /usr/src/app/target/prom-java-demo-0.0.1-SNAPSHOT.jar /opt/app.jar
 WORKDIR /opt
-CMD ["java", "-jar", "app.jar"]
+CMD ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-XX:MaxRAMFraction=1", "-XX:+UseG1GC", "-jar", "app.jar"]
